# extension_parler_tts

./: pyproject.toml
tts_webui_extension/parler_tts/: api.py  main.py  test_api.py  test_gradio_api.py
