[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tts_webui_extension.parler_tts"
version = "0.2.1"
description = "Parler-TTS is a training and inference library for high-fidelity text-to-speech (TTS) models."
readme = "README.md"
authors = [
    {name = "rsxdalv"}
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "parler-tts @ git+https://github.com/huggingface/parler-tts@main",
]

[project.urls]
Homepage = "https://github.com/rsxdalv/tts_webui_extension.parler_tts"

[tool.setuptools.packages.find]
namespaces = true